objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>How many days has this ticket been open?</description>
        <formula>IF(
   IsClosed__c = &quot;True&quot;,
   Date_Completed__c -  DATEVALUE(CreatedDate), 
   TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days has this Change Request been open?</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Affected_Users__c</fullName>
        <description>How much of your department is affected?</description>
        <label>How much of your department is affected?</label>
        <picklist>
            <picklistValues>
                <fullName>Everyone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Most users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Replicates approval process stages on Change Request.</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_All_Stories_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if associated user stories are closed or not.  verified in the flow</description>
        <label>Are All Stories Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Curator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not on page layout. To be used by Approval Process and is set by code and custom settings</description>
        <label>BU Curator</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>USER IS NOT ACTIVE</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Impact__c</fullName>
        <description>Cross BU impact?</description>
        <inlineHelpText>Does this cause issues for all business units in the org?</inlineHelpText>
        <label>Is there cross BU impact?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Which Business Unit is this change for</description>
        <inlineHelpText>Which Business Unit is this change for?</inlineHelpText>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>ATG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check whether the Curator has approved the CR for Feature type requests.</description>
        <inlineHelpText>Auto-populated from the Curator Approval process</inlineHelpText>
        <label>CR Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when the owner of the CR certifies the story for release to production after their UAT.</description>
        <label>CR Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Came_from_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this Change Request was converted from the old system.</description>
        <label>Came from Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>I need help with:</label>
        <picklist>
            <picklistValues>
                <fullName>Access/Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Request_Status__c</fullName>
        <inlineHelpText>Dismissed means we cannot do this. Deferred means we cannot do it anytime soon.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Curator Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive Discovery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Type_Details__c</fullName>
        <description>Add extra detail to the Change Type pick list</description>
        <label>Change Type Details</label>
        <picklist>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field/Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Alerts/Notifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Break-Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Critical_Functionality_Affected__c</fullName>
        <description>Critical functionality affected?</description>
        <label>Does this affect critical functionality?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Critical_Functionality_Notes__c</fullName>
        <description>Field used to record notes on critically affected functionality.</description>
        <inlineHelpText>Describe in detail the critical functionality that is being affected and how it is being affected.</inlineHelpText>
        <label>Critical Functionality Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Sprint__c</fullName>
        <formula>IF(
   TODAY() &gt;= DATE(2015,12,28),
   &quot;Undefined&quot;,
   IF(
      TODAY() &gt;= DATE(2015,12,14),
      &quot;Zhora&quot;,
      IF(
         TODAY() &gt;= DATE(2015,11,30),
         &quot;Yoda&quot;,
         IF(
            TODAY() &gt;= DATE(2015,11,16),
            &quot;Xavier&quot;,
            IF(
               TODAY() &gt;= DATE(2015,11,02),
               &quot;Wonder Woman&quot;,
               IF(
                  TODAY() &gt;= DATE(2015,10,19),
                  &quot;Voltron&quot;,
                  IF(
                     TODAY() &gt;= DATE(2015,10,05),
                     &quot;Uhura&quot;,
                     IF(
                        TODAY() &gt;= DATE(2015,09,21),
                        &quot;Tron&quot;,
                        IF(
                           TODAY() &gt;= DATE(2015,09,07),
                           &quot;Spock&quot;,
                           &quot;Undefined&quot;
                        )
                     )
                  )
               )
            )
         )
      )
   )
)</formula>
        <label>Current Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Integrity_Affected__c</fullName>
        <description>Does this affect data integrity?</description>
        <label>Does this affect data integrity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>These will be rolled over to Work record created.</description>
        <inlineHelpText>The first 124 characters will be visible in all your list views</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director_s_Approval__c</fullName>
        <label>Director&apos;s Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Needed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <label>Escalated To</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised Hand Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_Completion__c</fullName>
        <label>Estimated Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>CASE(Change_Request_Status__c , 
&quot;Closed&quot;, &quot;True&quot;, 
&quot;Duplicate&quot;, &quot;True&quot;, 
&quot;Rejected&quot;, &quot;True&quot;,
&quot;Resolved&quot;, &quot;True&quot;,
&quot;False&quot;)</formula>
        <label>IsClosed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Number__c</fullName>
        <label>Jira #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jira_Priority__c</fullName>
        <label>Jira Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Status__c</fullName>
        <label>Jira Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Team__c</fullName>
        <label>Jira Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_URL__c</fullName>
        <formula>IF(ISNULL(Jira_Number__c), NULL, HYPERLINK(&quot;https://jira.vauto.com/browse/SF-&quot; &amp; TEXT(Jira_Number__c), &quot;Jira Issue SF-&quot; &amp; TEXT(Jira_Number__c)))</formula>
        <label>Jira URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_This_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track which CRs to be converted into new CR system after FEB 22, 2016</description>
        <inlineHelpText>Please check this box to ensure this work will be retained after Feb 22, 2016.</inlineHelpText>
        <label>Keep This CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOE_Hours__c</fullName>
        <inlineHelpText>Level of effort in hours</inlineHelpText>
        <label>LOE Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <label>LOE</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <inlineHelpText>Copy the complete URL from your browser when the record is on the screen and paste it here.</inlineHelpText>
        <label>Link to Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Metadata_Changes__c</fullName>
        <inlineHelpText>Log all changes made to any metadata (aka Eclipse-searchable or admin-only) that is related to this CR.</inlineHelpText>
        <label>Metadata Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Moving_Forward_Notes__c</fullName>
        <label>Moving Forward Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_Forward__c</fullName>
        <label>Moving Forward</label>
        <picklist>
            <picklistValues>
                <fullName>Complete It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postpone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_User_Department__c</fullName>
        <description>Used for Haystak New Employee requests.</description>
        <label>New User Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_First_and_Last_Name__c</fullName>
        <description>Used for Haystak New Employee requests.</description>
        <label>New User First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Haystak New Employee requests.</description>
        <label>New User Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_User_Start_Date__c</fullName>
        <description>Used for Haystak New Employee requests.</description>
        <label>New User Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Priority Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_SF_Team_Member__c</fullName>
        <description>Used to determine if the CR is from an internal SF team member.</description>
        <formula>Owner:User.SF_Team_Member__c</formula>
        <label>Owner SF Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner&apos;s Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_s_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner&apos;s Team Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Change</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>5-Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Cool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Warm</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2-Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ON FIRE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is something that needs approval.</inlineHelpText>
        <label>Architecture Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_Release_Notes__c</fullName>
        <inlineHelpText>When in doubt, YES.</inlineHelpText>
        <label>Publish to Release Notes</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Raise_Hand_Notes__c</fullName>
        <label>Raise Hand Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Raise_Hand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Level 1 to indicate that there is not a Clear Assign for this request.</description>
        <label>Raise Hand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only used to transition change controls over to change requests.</description>
        <label>Related Change Control</label>
        <referenceTo>SLX__Change_Control__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PANs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Pieces</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Details__c</fullName>
        <label>Release Notes Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <description>The field has been deprecated</description>
        <inlineHelpText>The first 124 characters will be visible in all your list views</inlineHelpText>
        <label>Internal Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolve_Notes__c</fullName>
        <label>Resolve Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date CR was reviewed</description>
        <inlineHelpText>Fill in date CR was reviewed.</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roadmap_Month__c</fullName>
        <label>Roadmap Month</label>
        <picklist>
            <picklistValues>
                <fullName>01-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roadmap_Quarter__c</fullName>
        <label>Roadmap Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roadmap_Year__c</fullName>
        <label>Roadmap Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>